export interface TaskId {
    readonly value: string
}